--- a/backend/src/main/java/com/example/authservice/resources/application.properties
+++ b/backend/src/main/java/com/example/authservice/resources/application.properties
@@ -1,4 +1,5 @@
-# Server Port
+# Server Port run command  java -jar target/authservice-0.0.1-SNAPSHOT.jar --server.port=9090
+-jar target/authservice-0.0.1-SNAPSHOT.jar
 server.port=9090
 
 # Enable H2 Console
